JBIDE-26278 Add Hibernate 5.3 and 5.4 runtimes in ITests, refactoring
Signed-off-by: Josef Kopriva <jkopriva@redhat.com>